修改导航栏和个人主页头像，并设置为圆形

--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -1,5 +1,5 @@
 // place your custom styles here
-.vp-blog-hero-image {
+.vp-nav-logo, .vp-blog-hero-image, .vp-blogger-avatar {
   border-radius: 50%;
   overflow: hidden;
 }
