关闭文字渐变色

--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -6,8 +6,8 @@
 }
 
 /* 渐变文本效果适用于博客英雄标题和描述 */
-.vp-blog-hero-title, .vp-blog-hero-description {
-  background: linear-gradient(120deg, var(--theme-color-light), var(--theme-color) 30%, #3e71af 100%);
-  background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
+//.vp-blog-hero-title, .vp-blog-hero-description {
+//  background: linear-gradient(120deg, var(--theme-color-light), var(--theme-color) 30%, #3e71af 100%);
+//  background-clip: text;
+//  -webkit-text-fill-color: transparent;
+//}
