侧边栏目录字体加粗

--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -11,3 +11,8 @@
 //  background-clip: text;
 //  -webkit-text-fill-color: transparent;
 //}
+
+/* 侧边栏目录字体加粗 */
+.vp-sidebar-heading .vp-sidebar-title {
+  font-weight: 900;
+}
