--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -16,3 +16,9 @@
 .vp-sidebar-heading .vp-sidebar-title {
   font-weight: 900;
 }
+
+/* 修改Markdown中的“块引用”颜色*/
+blockquote {
+  border-color: var(--theme-color) 30%;
+}
+
