--- a/src/.vuepress/styles/palette.scss
+++ b/src/.vuepress/styles/palette.scss
@@ -1,6 +1,6 @@
 // you can change colors here
 // 设置默认主题色
-$theme-color: #a266f3;
+$theme-color: #3eaf7c;
 
 // 主题色选择器
-//$theme-colors: #2196f3, #f26d6d, #3eaf7c, #fb9b5f;
+//$theme-colors: #2196f3, #f26d6d, #3eaf7c, #fb9b5f, #a266f3;
