--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -6,11 +6,12 @@
 }
 
 /* 渐变文本效果适用于博客英雄标题和描述(彩虹渐变) */
-//.vp-blog-hero-title, .vp-blog-hero-description {
-//  background: linear-gradient(45deg, #c0392b, #d35400, #f39c12, #27ae60, #16a085, #2980b9, #8e44ad);
-//  background-clip: text;
-//  -webkit-text-fill-color: transparent;
-//}
+.vp-blog-hero-title, .vp-blog-hero-description {
+  background: linear-gradient(45deg, #c0392b, #d35400, #f39c12, #27ae60, #16a085, #2980b9, #8e44ad);
+  filter: brightness(1.5);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 
 /* 侧边栏目录字体加粗 */
 .vp-sidebar-heading .vp-sidebar-title {
