--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -34,6 +34,6 @@ mark {
   border-radius: 2px;
   padding: 2px 4px;
   margin: 0 2px;
-  color: #222;
+  color: var(--text-color);
   font-weight: 500;
 }
