--- a/src/.vuepress/styles/palette.scss
+++ b/src/.vuepress/styles/palette.scss
@@ -3,4 +3,4 @@
 $theme-color: #3eaf7c;
 
 // 主题色选择器
-//$theme-colors: #2196f3, #f26d6d, #3eaf7c, #fb9b5f, #a266f3;
+$theme-colors: #a266f3, #2196f3, #fb9b5f;
