style：使用必应壁纸，一言描述

--- a/src/.vuepress/styles/palette.scss
+++ b/src/.vuepress/styles/palette.scss
@@ -1,6 +1,6 @@
 // you can change colors here
 // 设置默认主题色
-$theme-color: #3eaf7c;
+$theme-color: #a266f3;
 
 // 主题色选择器
-$theme-colors: #a266f3, #2196f3, #fb9b5f;
+$theme-colors: #3eaf7c, #2196f3, #fb9b5f;
