docs：SpringBoot 快速入门

--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -19,7 +19,7 @@ body {
 //}
 
 /* 侧边栏目录字体加粗 */
-.vp-sidebar-heading .vp-sidebar-title {
+.vp-sidebar-links .vp-sidebar-group .vp-sidebar-header {
   font-weight: 900;
 }
 
