--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -19,7 +19,8 @@ body {
 //}
 
 /* 侧边栏目录字体加粗 */
-.vp-sidebar-links .vp-sidebar-group .vp-sidebar-header {
+.vp-sidebar-links .vp-sidebar-group .vp-sidebar-header,
+.vp-sidebar-links .vp-sidebar-group .vp-sidebar-title {
   font-weight: 900;
 }
 
