--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -3,7 +3,6 @@ body {
   font-family: initial;
 }
 
-// place your custom styles here
 /* 圆角和溢出隐藏适用于导航栏logo、博客英雄图片和博主头像 */
 .vp-nav-logo, .vp-blog-hero-image, .vp-blogger-avatar {
   border-radius: 50%;
@@ -24,8 +23,16 @@ body {
   font-weight: 900;
 }
 
-/*Markdown*/
-// 修改“块引用”颜色
+//// 针对使用“vuepress-plugin-search-pro”插件，调整搜索框样式
+//// 设置搜索框圆角
+//.vp-navbar-end .search-pro-button {border-radius: 100%;}
+//// 隐藏搜索框文案 和 快捷键提示
+//.search-pro-button .search-pro-placeholder, .search-pro-key-hints {display: none;}
+
+/**
+ * ========== Markdown 样式 ==========
+ */
+// 参考 Typora Vue 主题，修改 > 块引用 颜色
 html[data-theme] blockquote {
   border-left: 4px solid var(--theme-color);
   padding: 10px 15px;
@@ -33,7 +40,7 @@ html[data-theme] blockquote {
   background-color: var(--theme-color-mask);
 }
 
-// 修改“标记”颜色
+// 修改 `标记` 颜色
 html[data-theme] mark {
   background-color: var(--theme-color-mask);
   border-radius: 2px;
@@ -43,24 +50,64 @@ html[data-theme] mark {
   font-weight: 500;
 }
 
-// 修改“表格”宽度
+// 默认情况下，“表格” 宽度不会占满整个屏幕，这里设置为 100%
 table {
   display: inline-table;
   width: 100%;
   border-radius: 1px;
 }
 
-// 修改“表格”边框
+// “表格” 标题居左显示
+table th {
+  text-align: left;
+}
+
+// 去除“表格”的边框，看起来更加美观
 thead, tbody, tfoot, tr, td, th {
   border-width: 0 0 1px 0;
 }
 
-// 设置搜索框圆角
-.vp-navbar-end .search-pro-button {
-  border-radius: 100%;
+// 左侧边栏边框和滚动条样式
+.vp-sidebar {
+  html[data-theme=light] & {
+    border-right: 1px solid #eaecef;
+  }
+
+  html[data-theme=dark] & {
+    scrollbar-color: #5f5f5f #30363d;
+    border-right: 1px solid #30363d;
+  }
 }
 
-// 隐藏搜索框文案 和 快捷键提示
-.search-pro-button .search-pro-placeholder, .search-pro-key-hints {
-  display: none;
+/**
+ * ========== 夜间模式显示优化 ==========
+ */
+// 背景颜色：#1b1f23
+html[data-theme=dark] {
+  --text-color: #fff; /*页面字体颜色*/
+  --bg-color: #1b1f23; /*页面背景颜色*/
+  --bg-color-blur: #1b1f23; /*侧边栏背景颜色*/
+  --border-color: #30363d; /*页面边框线条颜色*/
+  --dark-grey: #fff; /*图标颜色*/
+  --light-grey: #fff;
+
+  .vp-project-name {
+    color: #fff;
+  }
+
+  //文章，分类，标签，时间轴标签颜色
+  .vp-blog-type-button {
+    color: #fff;
+  }
+}
+
+// 右侧目录
+.vp-toc-link {
+  html[data-theme=light] & {
+    color: #999;
+  }
+
+  html[data-theme=dark] & {
+    color: #fff;
+  }
 }
