--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -86,14 +86,18 @@ thead, tbody, tfoot, tr, td, th {
 html[data-theme=dark] {
   --text-color: #e6edf3; /*页面字体颜色*/
   --bg-color: #1b1f23; /*页面背景颜色*/
-  --bg-color-blur: #1b1f23; /*侧边栏背景颜色*/
+  --bg-color-secondary: #0d1117; /*搜索框按钮样式*/
   --border-color: #30363d; /*页面边框线条颜色*/
-  --dark-grey: #e6edf3; /*图标颜色*/
-  --light-grey: #e6edf3;
+  --dark-grey: #e6edf3; /*图标文字颜色*/
+  --light-grey: #e6edf3; /*小图标颜色*/
+  --navbar-bg-color: #1b1f23;
+  --sidebar-bg-color: #1b1f23;
+  --bg-color-back: #1b1f23;
+  --bg-color-blur: #1b1f23;
 
-  .vp-project-name {
-    color: #e6edf3;
-  }
+  //.vp-project-name {
+  //  color: #e6edf3;
+  //}
 
   //文章，分类，标签，时间轴标签颜色
   .vp-blog-type-button {
