目录优化-2，可折叠设置

--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -18,8 +18,7 @@ body {
 //}
 
 /* 侧边栏目录字体加粗 */
-.vp-sidebar-links .vp-sidebar-group .vp-sidebar-header,
-.vp-sidebar-links .vp-sidebar-group .vp-sidebar-title {
+.vp-sidebar-links .vp-sidebar-group .vp-sidebar-header .vp-sidebar-title {
   font-weight: 900;
 }
 
