--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -1,125 +1,121 @@
-// 解决当前Chrome页面字体加粗问题，移除‘STHeiti’字体
+// 解决新版Chrome字体加粗
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Fira Sans", "Droid Sans", "Helvetica Neue", "Microsoft YaHei", SimSun, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  font-size: 16px;
+  color: #2c3e50;
 }
 
-/* 圆角和溢出隐藏适用于导航栏logo、博客英雄图片和博主头像 */
-.vp-nav-logo, .vp-blog-hero-image, .vp-blogger-avatar {
-  border-radius: 50%;
-  overflow: hidden;
+// 博客标题加粗，设置右边距
+#navbar .vp-site-name {
+  font-weight: 600;
+  padding-right: 0.5rem;
 }
 
-/* 渐变文本效果适用于博客英雄标题和描述(彩虹渐变) */
-//.vp-blog-hero-title, .vp-blog-hero-description {
-//  background: linear-gradient(45deg, #c0392b, #d35400, #f39c12, #27ae60, #16a085, #2980b9, #8e44ad);
-//  filter: brightness(1.5);
-//  background-clip: text;
-//  -webkit-text-fill-color: transparent;
-//}
+// 导航栏设置
+.vp-navbar{
+  box-shadow: none;
+  border-bottom: 1px solid #eaecef;
+}
 
-/* 侧边栏目录样式设置 */
-// 第一级vp-sidebar-title设置
+// 设置博客上边距为 20 像素
+.blog-page-wrapper {
+  margin-top: 20px;
+}
+
+// 侧边栏加粗（仅加粗包含子目录的）
 .vp-sidebar-links .vp-sidebar-title {
-  font-weight: 900;
-}
-
-// 第二级vp-sidebar-title设置
-.vp-sidebar-links .vp-sidebar-links .vp-sidebar-title {
   font-weight: 700;
 }
 
-// 第三级vp-sidebar-title设置
-.vp-sidebar-links .vp-sidebar-links .vp-sidebar-links .vp-sidebar-title {
-  font-weight: 500;
-}
-
-
-//// 针对使用“vuepress-plugin-search-pro”插件，调整搜索框样式
-//// 设置搜索框圆角
-//.vp-navbar-end .search-pro-button {border-radius: 100%;}
-//// 隐藏搜索框文案 和 快捷键提示
-//.search-pro-button .search-pro-placeholder, .search-pro-key-hints {display: none;}
-
-/**
- * ========== Markdown 样式 ==========
- */
-// 参考 Typora Vue 主题，修改 > 块引用 颜色
-html[data-theme] blockquote {
-  border-left: 4px solid var(--theme-color);
-  padding: 10px 15px;
-  color: var(--text-color);
-  background-color: var(--theme-color-mask);
-}
-
-// 修改 `标记` 颜色
-html[data-theme] mark {
-  background-color: var(--theme-color-mask);
-  border-radius: 2px;
-  padding: 2px 4px;
-  margin: 0 2px;
-  color: var(--text-color);
-  font-weight: 500;
-}
-
-// 默认情况下，“表格” 宽度不会占满整个屏幕，这里设置为 100%
-table {
-  display: inline-table;
-  width: 100%;
-  border-radius: 1px;
-}
-
-// “表格” 标题居左显示
-table th {
-  text-align: left;
-}
-
-// 鼠标悬停时改变行颜色
-tr:hover {
-  html[data-theme=light] & {
-    background-color: #ebebeb;
-  }
-
-  html[data-theme=dark] & {
-    background-color: #30363d;
-  }
-}
-
-// 去除“表格”的边框，看起来更加美观
-thead, tbody, tfoot, tr, td, th {
-  border-width: 0 0 1px 0;
-}
-
-// 左侧边栏边框样式
+// 侧边栏靠左
 .vp-sidebar {
-  html[data-theme=light] & {
-    border-right: 1px solid #eaecef;
-  }
-
-  html[data-theme=dark] & {
-    border-right: 1px solid #30363d;
-  }
+  font-size: 0.86em;
+  scrollbar-color: var(--border-color);
+  //padding-inline-start: 0;
 }
 
-/**
- * ========== 夜间模式显示优化 ==========
- */
-// 夜间模式背景图片遮罩
-[data-theme=dark] .vp-blog-hero .vp-blog-mask:after {
-  background: #000;
-  opacity: .7 !important;
-}
+///**
+// * ========== Markdown 样式 ==========
+// */
+//// 参考 Typora Vue 主题，修改 > 块引用 颜色
+//html[data-theme] blockquote {
+//  border-left: 4px solid var(--theme-color);
+//  padding: 10px 15px;
+//  color: var(--text-color);
+//  background-color: var(--theme-color-mask);
+//}
+//
+//// 修改 `标记` 颜色
+//html[data-theme] mark {
+//  background-color: var(--theme-color-mask);
+//  border-radius: 2px;
+//  padding: 2px 4px;
+//  margin: 0 2px;
+//  color: var(--text-color);
+//  font-weight: 500;
+//}
+//
+//// 默认情况下，“表格” 宽度不会占满整个屏幕，这里设置为 100%
+//table {
+//  display: inline-table;
+//  width: 100%;
+//  border-radius: 1px;
+//}
+//
+//// “表格” 标题居左显示
+//table th {
+//  text-align: left;
+//}
+//
+//// 鼠标悬停时改变行颜色
+//tr:hover {
+//  html[data-theme=light] & {
+//    background-color: #ebebeb;
+//  }
+//
+//  html[data-theme=dark] & {
+//    background-color: #30363d;
+//  }
+//}
+//
+//// 去除“表格”的边框，看起来更加美观
+//thead, tbody, tfoot, tr, td, th {
+//  border-width: 0 0 1px 0;
+//}
+//
+//// 左侧边栏边框样式
+//.vp-sidebar {
+//  html[data-theme=light] & {
+//    border-right: 1px solid #eaecef;
+//  }
+//
+//  html[data-theme=dark] & {
+//    border-right: 1px solid #30363d;
+//  }
+//}
+//
+///**
+// * ========== 夜间模式显示优化 ==========
+// */
+//// 夜间模式背景图片遮罩
+//[data-theme=dark] .vp-blog-hero .vp-blog-mask:after {
+//  background: #000;
+//  opacity: .7 !important;
+//}
 
-// 背景颜色：#1b1f23
-html[data-theme=dark] {
-  --text-color: #e6edf3; /*页面字体颜色*/
-  --bg-color: #1b1f23; /*页面背景颜色*/
-  --bg-color-secondary: #0d1117; /*搜索框按钮样式*/
-  --border-color: #30363d; /*页面边框线条颜色*/
-  --dark-grey: #e6edf3; /*图标文字颜色*/
-  --light-grey: #e6edf3; /*小图标颜色*/
-  --navbar-bg-color: #1b1f23;
-  --sidebar-bg-color: #1b1f23;
-  --bg-color-back: #1b1f23;
-  --bg-color-blur: #1b1f23;
-  --bg-color-float: #1b1f23; /*首页个人简介等卡片背景颜色*/
-}
+//// 背景颜色：#1b1f23
+//html[data-theme=dark] {
+//  --text-color: #e6edf3; /*页面字体颜色*/
+//  --bg-color: #1b1f23; /*页面背景颜色*/
+//  --bg-color-secondary: #0d1117; /*搜索框按钮样式*/
+//  --border-color: #30363d; /*页面边框线条颜色*/
+//  --dark-grey: #e6edf3; /*图标文字颜色*/
+//  --light-grey: #e6edf3; /*小图标颜色*/
+//  --navbar-bg-color: #1b1f23;
+//  --sidebar-bg-color: #1b1f23;
+//  --bg-color-back: #1b1f23;
+//  --bg-color-blur: #1b1f23;
+//  --bg-color-float: #1b1f23; /*首页个人简介等卡片背景颜色*/
+//}
