--- a/src/.vuepress/styles/palette.scss
+++ b/src/.vuepress/styles/palette.scss
@@ -1,5 +1,5 @@
 // 设置默认主题色
-$theme-color: #2196f3;
+$theme-color: #3eaf7c;
 
 // 主题色选择器
-$theme-colors: #3eaf7c, #a266f3, #fb9b5f;
+//$theme-colors: #2196f3, #a266f3, #fb9b5f;
