--- a/src/.vuepress/styles/config.scss
+++ b/src/.vuepress/styles/config.scss
@@ -1,4 +1,35 @@
 // 你可以在这里更改配置 https://theme-hope.vuejs.press/zh/config/style.html
-/* 颜色列表 */
-$colors: #c0392b, #d35400, #f39c12, #27ae60, #16a085, #2980b9, #8e44ad, #2c3e50,
-  #7f8c8d !default;
+/* Content Class */
+$content-class: ".theme-hope-content";
+
+/* responsive breakpoints */
+
+// wide screen
+$pc: 1440px !default;
+
+// desktop
+$laptop: 1280px !default;
+
+// narrow desktop / iPad
+$pad: 959px !default;
+
+// wide mobile
+$tablet: 719px !default;
+
+// narrow mobile
+$mobile: 419px !default;
+
+/* Color list */
+$colors: #cf1322, #fa541c, #f39c12, #2ecc71, #25a55b, #10a5a5, #096dd9, #aa6fe9,
+#eb2f96 !default;
+
+/* Code Block */
+// only available with shiki highlighter
+$code-color: (
+        light: #383a42,
+        dark: #abb2bf,
+) !default;
+$code-bg-color: (
+        light: #ecf4fa,
+        dark: #282c34,
+) !default;
