--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -1,15 +1,9 @@
-// 解决新版Chrome字体加粗
+// fix：解决新版Chrome字体加粗
 body {
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-size: 16px;
-}
-
-// 博客标题加粗，设置右边距
-#navbar .vp-site-name {
-  font-weight: 600;
-  padding-right: 0.5rem;
 }
 
 // 设置博客上边距为 20 像素
