--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -6,32 +6,27 @@ body {
   font-size: 16px;
 }
 
-// 设置博客上边距为 20 像素
-.blog-page-wrapper {
-  margin-top: 20px;
+// 导航栏
+#navbar {
+  border-bottom: 1px solid var(--border-color);
 }
 
-// 侧边栏加粗（仅加粗包含子目录的）
-.vp-sidebar-links .vp-sidebar-title {
-  font-weight: 700;
-}
-
-// 侧边栏靠左
-.vp-sidebar {
+// 侧边栏
+#sidebar {
+  border-right: 1px solid var(--border-color);
   font-size: 0.86em;
   scrollbar-color: var(--border-color);
   //padding-inline-start: 0;
+
+  // 父级目录字体加粗
+  .vp-sidebar-title {
+    font-weight: 700;
+  }
 }
 
-// 侧边栏添加边框线条
-.vp-sidebar {
-  html[data-theme=light] & {
-    border-right: 1px solid #eaecef;
-  }
-
-  html[data-theme=dark] & {
-    border-right: 1px solid #30363d;
-  }
+// 设置博客上边距
+.blog-page-wrapper {
+  margin-top: 20px;
 }
 
 /**
@@ -84,16 +79,16 @@ thead, tbody, tfoot, tr, td, th {
 }
 
 html[data-theme=dark] {
-  --text-color: #e6edf3; /*页面字体颜色*/
-  --bg-color: #1b1f23; /*页面背景颜色*/
-  --bg-color-secondary: #0d1117; /*搜索框按钮样式*/
-  --border-color: #30363d; /*页面边框线条颜色*/
-  --dark-grey: #e6edf3; /*图标文字颜色*/
-  --light-grey: #e6edf3; /*小图标颜色*/
-  --navbar-bg-color: #1b1f23;
-  --sidebar-bg-color: #1b1f23;
-  --bg-color-back: #1b1f23;
-  --bg-color-blur: #1b1f23;
-  --bg-color-float: #1b1f23; /*首页个人简介等卡片背景颜色*/
-  --grey3: #fff;
+  //--text-color: #e6edf3; /*页面字体颜色*/
+  //--bg-color: #1b1f23; /*页面背景颜色*/
+  //--bg-color-secondary: #0d1117; /*搜索框按钮样式*/
+  //--border-color: #30363d; /*页面边框线条颜色*/
+  //--dark-grey: #e6edf3; /*图标文字颜色*/
+  //--light-grey: #e6edf3; /*小图标颜色*/
+  //--navbar-bg-color: #1b1f23;
+  //--sidebar-bg-color: #1b1f23;
+  //--bg-color-back: #1b1f23;
+  //--bg-color-blur: #1b1f23;
+  //--bg-color-float: #1b1f23; /*首页个人简介等卡片背景颜色*/
+  //--grey3: #fff;
 }
