Class类文件结构-字段表集合

--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -60,7 +60,7 @@ html[data-theme] mark {
 table {
   // 默认情况下，“表格” 宽度不会占满整个屏幕，这里设置为 100%
   display: inline-table;
-  width: 100%;
+  //width: 100%;
   border-radius: 1px;
   margin: 0;
 
