--- a/src/.vuepress/styles/index.scss
+++ b/src/.vuepress/styles/index.scss
@@ -111,3 +111,10 @@ html[data-theme=light] {
   //--dark-grey: #2c3e50; /*图标文字颜色*/
   --light-grey: #2c3e50; /*图标文字颜色*/
 }
+
+
+// 夜间模式下降低图片亮度
+html[data-theme="dark"] img {
+  filter: brightness(0.7); /* 适当降低亮度 */
+  transition: filter 0.3s ease-in-out;
+}
