--- a/src/.vuepress/styles/palette.scss
+++ b/src/.vuepress/styles/palette.scss
@@ -2,4 +2,4 @@
 $theme-color: #3eaf7c;
 
 // 主题色选择器
-//$theme-colors: #2196f3, #a266f3, #fb9b5f;
+$theme-colors: #2196f3, #a266f3, #e04c8a, #fb9b5f;
